# tasks

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/: tests.py  urls.py  views.py
models/: admin.py  models.py
models/migrations/: 0001_initial.py  0002_auto_20210822_0310.py  0003_auto_20210822_1424.py  0004_task_deleted_at.py
tasks/: settings.py  urls.py
tasks/settings/: __init__.py  base.py  local.py
