[tool.poetry]
name = "tasks"
version = "0.1.0"
description = "Tasks project with Python, Django, PostgreSQL and Docker"
authors = ["Alvin <nicoavn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
psycopg2-binary = ">=2.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
